cilium/app1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app1
  namespace: test-network
  labels:
    app: app1
spec:
  containers:
  - name: app1
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
