cilium/app2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app2
  namespace: test-network
  labels:
    app: app2
spec:
  containers:
  - name: app2
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
