cilium/app3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app3
  namespace: test-network
  labels:
    app: app3
spec:
  containers:
  - name: app3
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
